--- a/index.html
+++ b/index.html
@@ -865,10 +865,10 @@
                         <i class="fas fa-chart-bar"></i>
                     </div>
                     <div class="project-content">
-                        <h3>Market Visual Analysis</h3>
+                        <h3>Data (Analysis & Virtulazation)</h3>
                         <p>Interactive Tableau dashboards visualizing sales, profit, and discount metrics to support data-driven decision-making.</p>
                         <div class="project-links">
-                            <a href="https://hansec-technology-dot.github.io/port1_host" class="project-link" target="_blank">
+                            <a href=" https://hansec-technology-dot.github.io/Data.Analysis.Virtulazation/" class="project-link" target="_blank">
                                 <i class="fas fa-external-link-alt"></i> Live Demo
                             </a>
                         </div>
