Update project link for HanSec Medical

--- a/index.html
+++ b/index.html
@@ -1126,7 +1126,7 @@
                         <h3>HanSec Medical & Rosetrapy</h3>
                         <p>Landing page development with AI Agent integration for medical terminology search and automated PDF data extraction using Python.</p>
                         <div class="project-links">
-                            <a href="https://hansec-technology-dot.github.io/Ouma-Haningtone/" class="project-link" target="_blank">
+                            <a href=" https://hansec-technology-dot.github.io/Landing_pages//" class="project-link" target="_blank">
                                 <i class="fas fa-external-link-alt"></i> View Portfolio
                             </a>
                         </div>
